✨ Generate and show random names for everyone

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,22 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>Server</title><base href="/"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="/index.b552b3f4.css"></head><body> <h1>Testing</h1> <canvas id="canvas" width="800" height="600"></canvas> <script src="/index.fbbc03f2.js"></script> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Server</title>
+        <base href="/">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/index.d3e0b875.css">
+    </head>
+
+    <body>
+        <h1>Testing</h1>
+
+        <canvas id="canvas" width="800" height="600"></canvas>
+
+        <h2>Users:</h2>
+        <li hidden="" class="js-new-li"></li>
+        <ul class="js-users"></ul>
+
+        <script src="/index.f3a5c243.js"></script>
+    </body>
+</html>
