--- a/resources/index.html
+++ b/resources/index.html
@@ -13,6 +13,10 @@
 
         <canvas id="canvas" width="800" height="600"></canvas>
 
+        <h2>Users:</h2>
+        <li hidden class="js-new-li"></li>
+        <ul class="js-users"></ul>
+
         <script src="./scripts/app.js"></script>
     </body>
 </html>
