--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,18 @@
         <title>Server</title>
         <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/index.d3e0b875.css">
+        <link rel="stylesheet" href="/index.e300dbaf.css">
     </head>
 
     <body>
-        <h1>Testing</h1>
-
-        <canvas id="canvas" width="800" height="600"></canvas>
-
-        <h2>Users:</h2>
-        <li hidden="" class="js-new-li"></li>
-        <ul class="js-users"></ul>
+        <div class="container">
+            <canvas id="canvas" width="600" height="800"></canvas>
+            <div class="users">
+                <h2 class="js-users-title">Users:</h2>
+                <li hidden="" class="js-new-li"></li>
+                <ul class="js-users"></ul>
+            </div>
+        </div>
 
         <script src="/index.f3a5c243.js"></script>
     </body>
