✨ Now displays text instead of colour square

--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Server</title>
+        <title>Quiz</title>
         <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/index.e300dbaf.css">
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2280%22>🧠</text></svg>">
     </head>
 
     <body>
         <div class="container">
             <canvas id="canvas" width="600" height="800"></canvas>
             <div class="users">
-                <h2 class="js-users-title">Users:</h2>
                 <li hidden="" class="js-new-li"></li>
                 <ul class="js-users"></ul>
             </div>
