--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,18 @@
         <title>Quiz</title>
         <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/index.e300dbaf.css">
+        <link rel="stylesheet" href="/admin.e300dbaf.css">
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2280%22>🧠</text></svg>">
     </head>
 
     <body>
         <div class="container">
             <canvas id="canvas" width="600" height="800"></canvas>
-            <div class="users">
-                <li hidden="" class="js-new-li"></li>
-                <ul class="js-users"></ul>
+            <div class="sidebar">
+                <div class="users">
+                    <li hidden="" class="js-new-li">{{name}}</li>
+                    <ul class="js-users"></ul>
+                </div>
             </div>
         </div>
 
