✨ Points are now icons instead of names

--- a/public/admin.html
+++ b/public/admin.html
@@ -17,7 +17,7 @@
                     
                 </div>
                 <div class="users">
-                    <li hidden="" class="js-new-li">{{name}} <input type="button" value="Rename" class="js-rename" data-player-id="{{playerId}}"></li>
+                    <li hidden="" class="js-new-li">{{name}} <input type="button" value="Icon" class="js-set-icon" data-player-id="{{playerId}}"></li>
                     <ul class="js-users"></ul>
                 </div>
             </div>
