🚛 Move functions into own files

--- a/public/admin.html
+++ b/public/admin.html
@@ -14,7 +14,7 @@
             <canvas id="canvas" width="600" height="800"></canvas>
             <div class="sidebar">
                 <div class="action">
-                    
+                    <input type="button" value="Set Image" class="js-set-image">
                 </div>
                 <div class="users">
                     <li hidden="" class="js-new-li">{{name}} <input type="button" value="Icon" class="js-set-icon" data-player-id="{{playerId}}"></li>
