✨ Players can now be blindfolded

--- a/resources/admin.html
+++ b/resources/admin.html
@@ -15,6 +15,8 @@
             <div class="sidebar">
                 <div class="action">
                     <input type="button" value="Set Image" class="js-set-image">
+                    <input type="button" value="Blindfold On" class="js-set-blindfold-on">
+                    <input type="button" value="Blindfold Off" class="js-set-blindfold-off">
                 </div>
                 <div class="users">
                     <li hidden class="js-new-li">{{name}} <input type="button" value="Icon" class='js-set-icon' data-player-id="{{playerId}}"></li>
