🐛 Canvas bitmap and element size no longer have to be identital

--- a/resources/index.html
+++ b/resources/index.html
@@ -11,7 +11,7 @@
 
     <body>
         <div class="container">
-            <canvas id="canvas" width="600" height="800"></canvas>
+            <canvas id="canvas" width='600' height='800'></canvas>
             <div class="sidebar">
                 <div class="users">
                     <li hidden class="js-new-li">{{name}}</li>
