--- a/resources/index.html
+++ b/resources/index.html
@@ -9,7 +9,7 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2280%22>🧠</text></svg>">
     </head>
 
-    <body>
+    <body class="dark-bg">
         <div class="container">
             <canvas id="canvas" width='600' height='800'></canvas>
             <div class="sidebar">
